@@ -1,3 +1,9 @@
+1998-01-28  Mike Stump  <mrs@wrs.com>
+ 
+	* rtlanal.c (dead_or_set_regno_p): Ignore REG_DEAD notes after
+	reload completes.
+	* genattrtab.c (reload_completed, optimize): Define.
+
 Mon Feb  9 22:16:04 1998  J"orn Rennecke <amylaar@cygnus.co.uk>
 
 	* c-decl.c (grokdeclarator): Get parameter tags from
